--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -126,3 +126,9 @@
     color: #262626;
     font-size:0.8rem;
 }
+
+.errorMessage {
+    display:none;
+    color: red;
+    font-style: italic;
+}
