--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -72,7 +72,7 @@
 .hheading{
   font: Poppins;
   font-weight: 600;
-  font-size: 72px;
+  font-size: 4.5rem;
 }
 
 .hsubText{
@@ -126,6 +126,10 @@
   padding:4rem;
   height: 16rem;
   box-shadow: -9px 9px #f2f2f2;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .hstepEntryBlock{
