--- a/src/Components/LogIn/LogIn.css
+++ b/src/Components/LogIn/LogIn.css
@@ -31,6 +31,11 @@
      font: Poppins;
   }
 
+  .lErrorMessage {
+    display:none;
+    color: red;
+    font-style: italic;
+  }
 
 .lformHeading {
    font: Poppins;
